testsuite/tests/module/mod147.stderr

mod147.hs:6:5: error: Data constructor not in scope: D :: t0 -> t
